--- a/.config/waybar/tokens/widget.css
+++ b/.config/waybar/tokens/widget.css
@@ -54,7 +54,7 @@
   padding: 6px 15px 6px 10px;
   background-color: @surface_container;
   border-radius: 20px;
-  color: @secondary_fixed_dim;
+  color: @on_surface;
 }
 
 /*======= MODULE CAPSUL =======*/
@@ -66,7 +66,7 @@
   padding: 6px 6px;
   background-color: @surface_container;
   border-radius: 20px;
-  color: @secondary_fixed_dim;
+  color: @on_surface;
 }
 
 #disk,
@@ -93,7 +93,7 @@
   padding: 6px 15px 6px 10px;
   background-color: @surface_container;
   border-radius: 20px;
-  color: @secondary_fixed_dim;
+  color: @on_surface;
 }
 
 /*======= TRAY =======*/
